--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <nav class="nav nav-mobile">
       <a class="nav__link" href="#invest">invest</a>
-      <a class="nav__link" href="#plan">plan</a>
+      <a class="nav__link" href="#plans">plans</a>
       <a class="nav__link" href="#contact">contact</a>
     </nav>
     <nav class="nav nav-desktop">
@@ -73,7 +73,122 @@
       </div>
     </section>
 
-    
+    <div class="wrapper">
+      <section class="info" id="invest">
+        <div class="info__title">
+          <h2 class="section-title">invest <span>smart</span></h2>
+        </div>
+
+        <div class="info__boxes">
+          <div class="info__box">
+            <img src="img/money.jpg" alt="Money" class="info__box-img">
+            <h3 class="info__box-title">money</h3>
+            <p class="info__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae sapiente
+              voluptates odio omnis nulla nemo et ullam reiciendis recusandae blanditiis?</p>
+            <p class="info__box-text">Quos vero quisquam placeat quia eos aut! Maxime corrupti rerum consequuntur
+              obcaecati vero itaque sed, ipsa fugiat provident sint facere. Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. Obcaecati, deleniti?</p>
+
+            <a href="#" class="info__box-link">read more...</a>
+          </div>
+
+
+          <div class="info__box">
+            <img src="img/diamond.jpg" alt="Miamond" class="info__box-img">
+            <h3 class="info__box-title">diamond</h3>
+            <p class="info__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae sapiente
+              voluptates odio omnis nulla nemo et ullam reiciendis recusandae blanditiis?</p>
+            <p class="info__box-text">Quos vero quisquam placeat quia eos aut! Maxime corrupti rerum consequuntur
+              obcaecati vero itaque sed, ipsa fugiat provident sint facere. Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. Obcaecati, deleniti?</p>
+
+            <a href="#" class="info__box-link">read more...</a>
+          </div>
+
+          <div class="info__box">
+            <img src="img/gold.jpg" alt="Gold" class="info__box-img">
+            <h3 class="info__box-title">gold</h3>
+            <p class="info__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae sapiente
+              voluptates odio omnis nulla nemo et ullam reiciendis recusandae blanditiis?</p>
+            <p class="info__box-text">Quos vero quisquam placeat quia eos aut! Maxime corrupti rerum consequuntur
+              obcaecati vero itaque sed, ipsa fugiat provident sint facere. Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. Obcaecati, deleniti?</p>
+
+            <a href="#" class="info__box-link">read more...</a>
+          </div>
+        </div>
+        <img class="info__bg-icon info__bg-icon--one" src="img/icons/square.svg" alt="">
+        <img class="info__bg-icon info__bg-icon--two" src="img/icons/square.svg" alt="">
+        <img class="info__bg-icon info__bg-icon--three" src="img/icons/x.svg" alt="">
+        <img class="info__bg-icon info__bg-icon--four" src="img/icons/x.svg" alt="">
+
+      </section>
+    </div>
+
+    <div class="wrapper">
+      <section class="plans" id="plans">
+        <h2 class="section-title">plan your <span>future</span></h2>
+
+        <div class="plans__box">
+          <img src="img/icons/briefcase.svg" alt="" class="plans__item plans__item-icon">
+          <div class="plans__item plans__item-name">
+            <h3>#easyMoney</h3>
+          </div>
+          <div class="plans__item plans__item-money">
+            <p><b>Contribution</b></p>
+            <p>$250.000</p>
+          </div>
+          <div class="plans__item plans__item-term">
+            <p><b>Term</b></p>
+            <p>2 years</p>
+          </div>
+          <div class="plans__item plans__item-profit">
+            <p><b>Profit</b></p>
+            <p>5-10%</p>
+          </div>
+        </div>
+
+        <div class="plans__box">
+          <img src="img/icons/cast.svg" alt="" class="plans__item plans__item-icon">
+          <div class="plans__item plans__item-name">
+            <h3>reliableStuff</h3>
+          </div>
+          <div class="plans__item plans__item-money">
+            <p><b>Contribution</b></p>
+            <p>$5.000.000</p>
+          </div>
+          <div class="plans__item plans__item-term">
+            <p><b>Term</b></p>
+            <p>5 years</p>
+          </div>
+          <div class="plans__item plans__item-profit">
+            <p><b>Profit</b></p>
+            <p>25-35%</p>
+          </div>
+        </div>
+
+        <div class="plans__box">
+          <img src="img/icons/film.svg" alt="" class="plans__item plans__item-icon">
+          <div class="plans__item plans__item-name">
+            <h3>allInn</h3>
+          </div>
+          <div class="plans__item plans__item-money">
+            <p><b>Contribution</b></p>
+            <p>$15.000.000</p>
+          </div>
+          <div class="plans__item plans__item-term">
+            <p><b>Term</b></p>
+            <p>10-15 years</p>
+          </div>
+          <div class="plans__item plans__item-profit">
+            <p><b>Profit</b></p>
+            <p>50-75%</p>
+          </div>
+        </div>
+
+      </section>
+    </div>
+
 
   </main>
 
