added galery and contact sections

--- a/index.html
+++ b/index.html
@@ -185,9 +185,60 @@
             <p>50-75%</p>
           </div>
         </div>
-
       </section>
     </div>
+
+    <section class="newsletter">
+      <div class="wrapper newsletter__wrapper">
+
+        <div class="newsletter__text">
+          <p>Sign up for newsletter...</p>
+        </div>
+        <div class="newsletter__form"><input type="text">
+          <button>Subscribe</button>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="gallery">
+      <img src="img/gallery/1.jpg" alt="bitcoin">
+      <img src="img/gallery/2.jpg" alt="diamond">
+      <img src="img/gallery/3.jpg" alt="gold-headset">
+      <img src="img/gallery/4.jpg" alt="bitcoin">
+      <img src="img/gallery/5.jpg" alt="diamond">
+      <img src="img/gallery/6.jpg" alt="gold-headset">
+      <img src="img/gallery/7.jpg" alt="money">
+      <img src="img/gallery/8.jpg" alt="bitcoins">
+
+    </section>
+
+
+    <section class="contact" id="contact">
+      <div class="wrapper">
+        <h2 class="section-title">contact <span>us</span></h2>
+
+        <form class="contact__form">
+          <div class="contact__form-box">
+            <label for="name">Your name:</label>
+            <input type="text" id="name">
+          </div>
+          <div class="contact__form-box">
+            <label for="mail">Your e-mail:</label>
+            <input type="text" id="mail">
+          </div>
+          <div class="contact__form-box">
+            <label for="msg">Message:</label>
+            <textarea id="msg" cols="30" rows="10"></textarea>
+          </div>
+
+          <button type="submit" class="contact__form-btn">Send</button>
+
+        </form>
+
+      </div>
+    </section>
+
 
 
   </main>
